src/agent/snapshots/kwaak__agent__docker_tool_executor__tests__context_present_and_connective.snap
---
source: src/agent/docker_tool_executor.rs
expression: ls.to_string()
---
.
..
.git
.gitignore
Cargo.lock
Cargo.toml
Dockerfile
bacon.toml
compose.yml
kwaak.toml
src
typos.toml
