src/agent/snapshots/kwaak__agent__docker_tool_executor__tests__ssh_forwarding_on_self-2.snap
---
source: src/agent/docker_tool_executor.rs
expression: output.to_string()
---
fatal: could not read Username for 'https://github.com': No such device or address
