src/agent/snapshots/kwaak__agent__docker_tool_executor__tests__ssh_forwarding_on_self.snap
---
source: src/agent/docker_tool_executor.rs
expression: ls.to_string()
---
.
..
.git
.gitignore
Cargo.lock
Cargo.toml
Dockerfile
bacon.toml
kwaak.toml
src
typos.toml
